# fireplace

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile.toml  README.md
backend/: Cargo.toml  Makefile.toml
backend/src/: devices.rs  eventhandler.rs  lib.rs  main.rs  mqtt.rs  mutex_box.rs  store.rs  utils.rs
backend/src/devices/: shellies.rs  weather_underground_device.rs
backend/src/devices/shellies/: decodings.rs  incoming_data.rs
frontend/: Cargo.toml  Makefile.toml  Trunk.toml  index.html  manifest.json
frontend/src/: components.rs  device_list.rs  main.rs  router.rs  utils.rs  views.rs
frontend/src/components/: device.rs  layout.rs
frontend/src/views/: device_list.rs  last_events.rs
frontend/style/: style.scss
src/: config.rs  devices.rs  eventhandler.rs  lib.rs  main.rs  mqtt.rs  sensors.rs  shellies.rs
src/devices/: shellies.rs  subdevices.rs
src/devices/shellies/: decodings.rs  incoming_data.rs
src/devices/subdevices/: relays.rs
src/shellies/: decodings.rs  incoming_data.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  main.ts  style.scss  vite-env.d.ts
web/src/components/: DeviceView.vue  HelloWorld.vue  ReloadPWA.vue
web/src/plugins/: serverTypes.ts
web/src/router/: index.ts
web/src/stores/: devices.ts
web/src/views/: Home.vue
