[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.20.0"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
fireplace = { path = ".." }
toml = "0.7.2"

# serde_json is just for the example, not required in general
serde_json = "1.0"
chrono = { version = "0.4.23", features = ["serde"] }
actix-web = { version = "4", features = [] }
actix-files = "0.6.2"
ts-rs = { version = "6.1", features = ["chrono-impl", "serde-compat"] }

[dev-dependencies]
