[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fireplace = {path=".."}
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
gloo-console="0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen="0.2"
serde_json = "1.0"
yew-hooks = "0.2.0"