[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fireplace = { path = ".." }
gloo-net = "0.2"
gloo-console = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde_json = "1.0"
yew-hooks = "0.2.0"

enclose = "1"
indexmap = { version = "1", features = ["serde-1"] }
seed = "0.10.0"
uuid = { version = "1", features = ["serde", "v4"] }
