[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fireplace = { path = ".." }
gloo-net = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
serde_json = "1.0"
gloo-timers = { version = "0.2.4", features = ["futures"] }

sycamore ={version= "0.8", features = ["suspense"]}
sycamore-router = "0.8"